2005-05-19  Ross Burton  <ross@burtonini.com>

	* configure.in: Depend on nautilus-burn 2.11.

2005-04-04  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Remove useless tests for entry->value->type which may crash if
	entry is NULL.

2005-04-04  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Initialise the audio profiles before creating an SjExtractor.

2005-04-04  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Use Stop instead of Cancel in the progress dialog.

2005-03-31  Steve Murphy  <murf@e-tools.com>

	* configure.in: Added "rw" to ALL_LINGUAS.

2005-03-23  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added 'xh' to ALL_LINGUAS.

2005-03-08  Ahmad Riza H Nst  <ari@160c.afraid.org>

	* configure.in: Added id (Indonesian) to ALL_LINGUAS line.

2005-03-07  Mugurel Tudor  <mugurelu@go.ro>

	* configure.in: Added "ro" to ALL_LINGUAS

2005-03-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.10!

2005-03-07  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Make a label non-selectable (closes 169221)

2005-03-07  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/C/sound-juicer.xml:
	Added a tip on creating a MP3 profile.

2005-03-07  Shaun McCance  <shaunm@gnome.org>

	* help/sound-juicer/C/sound-juicer.xml:
	* help/sound-juicer/C/figures/prefs.png:
	* help/sound-juicer/C/figures/startup.png:
	- Documentation updates for 2.10

2005-03-02  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Use G_DEFINE_TYPE.

2005-03-02  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	* src/sj-genres.[ch]:
	* src/sj-main.c:
	Add consts.

2005-03-02  Rajesh Ranjan <rranjan@redhat.com>
	
	* configure.in: Added Hindi in ALL_LINGUAS

2005-02-28  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.9.92.

2005-02-24  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-main.c:
	Quit correctly (closes 168018, thanks Raj M Madhan).
