@@ -1,6 +1,12 @@
 2005-05-19  Ross Burton  <ross@burtonini.com>
 
 	* configure.in: Depend on nautilus-burn 2.11.
+	
+	* src/sound-juicer.h:
+	* src/sj-util.[ch]:
+	* src/sj-main.c:
+	* src/sj-extracting.c:
+	Use NautilusBurnDrive instead of device paths.
 
 2005-04-04  Ross Burton  <ross@burtonini.com>
 
